# GPS-Denied-Visual-Control-of-UAV

./: README.md
1_sensor/camera_base/launch/: extras.launch
2_vision/qrcode-detect/: CMakeLists.txt  package.xml
2_vision/qrcode-detect/cfg/: qrcode_detect.cfg
2_vision/qrcode-detect/include/: Marker.h  MarkerDetector.h  qrcodeDetectMain.h
2_vision/qrcode-detect/launch/: qrcode_detect.launch
2_vision/qrcode-detect/src/: Marker.cpp  MarkerDetector.cpp  qrcodeDetectMain.cpp  qrcode_detect_node.cpp
3_uav/: CMakeLists.txt  package.xml
3_uav/cfg/: uav.cfg
3_uav/launch/: camera_calib.launch  uav.launch  uav_bag.launch
3_uav/src/: uav_node.cpp
