<?xml version="1.0"?>
<package format="2">
  <name>qrcode_detect</name>
  <version>0.0.0</version>
  <description>The od package</description>

  <maintainer email="i@todo.todo">i</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
